--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@vue/cli-service": "~5.0.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.19",
+    "decimal.js": "^10.4.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.39",
+    "prettier-plugin-vue": "^1.1.6",
     "tailwindcss": "^3.4.6"
   },
   "eslintConfig": {
