--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.39",
     "prettier-plugin-vue": "^1.1.6",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "vue-router": "^4.4.0"
   },
   "eslintConfig": {
     "root": true,
