--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "core-js": "^3.8.3",
+    "tailwindcss-textshadow": "^2.1.3",
     "vue": "^3.2.13",
     "vuex": "^4.0.2"
   },
