--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.12.4",
     "tailwindcss-textshadow": "^2.1.3",
     "vue": "^3.2.13",
+    "vue-sweetalert2": "^5.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
